style.css
/*  NOTES
    Colors: 
        Dark Green: #424237
        Beige: #d9cfc2
        Light: #E6E6E1
        Orange: #D27456
        Rust: #9C452A

    Fonts: 
        font-family: 'Source Sans 3', sans-serif;

*/

/* CSS Reset */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}


/* Gridlex reset*/
[class*="col-"], [class*="col_"], [class~="col"]  {padding:0;}
﻿
[class*="grid-"], [class*="grid_"], [class~="grid"] {margin:0;} 


/* -------------- Universal Styles & utility classes--------------------- */


/* Padding Utility Classes ---------- */ 
.padded { padding: 5%; }
.padded-xs { padding: 1%;}
.padded-sm { padding: 2.5%; }
.padded-lg { padding: 10%;  }

.padded-05 { padding: 0.5rem; }
.padded-1 { padding: 1rem; }
.padded-2 { padding: 2rem; }

.padded-t { padding-top: 5%; }
.padded-b { padding-bottom: 5%; }
.padded-l { padding-left: 5%; }
.padded-r { padding-right: 5%; }

.padded-tb { padding-top: 5%; padding-bottom: 5%; }
.padded-lr { padding-left: 5%; padding-right: 5%; }

.padded-t-1 { padding-top: 1rem; }
.padded-b-1 { padding-bottom: 1rem; }
.padded-l-1 { padding-left: 1rem; }
.padded-r-1 { padding-right: 1rem; }

.padded-t-2 { padding-top: 2rem; }
.padded-b-2 { padding-bottom: 2rem; }
.padded-l-2 { padding-left: 2rem; }
.padded-r-2 { padding-right: 2rem; }

.padded-t-0 { padding-top: 0; }
.padded-b-0 { padding-bottom: 0; }
.padded-l-0 { padding-left: 0; }
.padded-r-0 { padding-right: 0; }

.padded-l-05 { padding-left: 0.5rem; }

/* Margin Utility Classes -----------*/ 

.margin-t { margin-top: 5%; }
.margin-b { margin-bottom: 5%; }
.margin-l { margin-left: 5%; }
.margin-r { margin-right: 5%; }

.margin-t-0 { margin-top: 0; }
.margin-b-0 { margin-bottom: 0; }
.margin-l-0 { margin-left: 0; }
.margin-r-0 { margin-right: 0; }

.margin-t-1 { margin-top: 1rem; }
.margin-b-1 { margin-bottom: 1rem; }

/* Height Classes ---------- */

.tall-50 { min-height: 50vh; }
.tall-60 { min-height: 60vh; }
.tall-70 { min-height: 70vh; }
.tall-80 { min-height: 80vh; }
.tall-90 { min-height: 90vh; }
.tall-100 { min-height: 100vh; }

/* wWdth Classes ---------- */

.width-30 { min-width: 30vw; }


/* Typography Styles--------------------------- */

body {
    font-family: 'Source Sans 3', sans-serif;
    color:#424237;
}

h3, h4, h5, h6 {
	line-height: 1.1;
	margin-bottom: 1rem;
}

h2 { font-size: 1.3rem; }
h3 { font-size: 4rem; }

p {
    font-weight: 300;
    line-height: 1.4;
    margin-bottom: 1rem;
}

h1:last-child, 
h2:last-child, 
h3:last-child, 
h4:last-child, 
h5:last-child, 
h6:last-child, 
p:last-child {
    margin-bottom: 0;
}

a {
    color: inherit;
    text-decoration: none;
    border-bottom: 1px solid;
}

a:hover {
    color: #D27456;
}

.font-weight-light      { font-weight: 300;}
.font-weight-normal     { font-weight: 400;}
.font-weight-extra-bold { font-weight: 800;}

.uppercase      { text-transform: uppercase;}

.left           { text-align: left; }
.center         { text-align: center; }
.right          { text-align: right; }

.light-text     { color: #E6E6E1; } 
.featured-text  { color: #9C452A; }

.small-text { font-size: 1.5rem;}
.medium-text {
    font-size: 2rem;
    line-height: 1.1;
}
.big-text   { font-size: 4rem; }

.subtitle {
    font-size: 1.2rem;
    color: rgb(120,120,125);
}


/* List Styles-----  */ 

ul {
    display: block;
    margin-top: 1em;
    margin-bottom: 1 em;
    margin-left: 0;
    margin-right: 0;
    padding-left: 1.5rem;
  }

/* Header Styles & Footer Styles-------------------------  */ 

.header-bg {
    background-image: url('/images/luna-guest-house-bed-end.jpg');
    background-size: cover;
    background-position: center;
    padding: 2% 5%;
}

h1 {
    font-size: 7rem;
    line-height: 1.1;
}

nav a {
    padding: 0.5rem;
    line-height: 1;
    border: none;
    margin: 0.2rem;
}

/* header {
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 100;
} */




.header-nav {
    background-color: #d9cfc2;
}

.logo h2 {
    font-size: 2rem;
}
  
.bg-overlay {
    position: relative;
}
  
.bg-overlay::before {
    content: ""; 
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background-color: rgba(0,0,0,0.3);
}
  
.bg-overlay > * {
    position: relative;
}


footer a {
    border: none;
    display: block;
}

.subtitle-footer {
        font-size: 0.8rem;
        font-style: italic;
        font-weight: light;
}

/* Background & Background Images  ------------------------- */

.bg-dark {
    background-color: #424237;
    color: #E6E6E1;
}
.bg-color {
    background-color: #D27456;
    color: #E6E6E1;
}
.bg-featured    { background-color:#d9cfc2;}
.bg-light       { background-color:#E6E6E1;}


/* Image Styles & classes */

.bg-image {
    background-color: #d27456;
    background-image: url('/images/luna-guest-house-bath.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    /*min-height: 10rem;*/
}

.gallery [class*="col-"] {
    padding: 0.8%;
}

.square          { padding-bottom: 100%;}
.portrait        { padding-bottom: 125%;}
.portrait-long   { padding-bottom: 145%;}
.portrait-tall   { padding-bottom: 175%;}
.landscape       { padding-bottom: 66%; }
.landscape-wide  { padding-bottom: 56%; }

.image-border { border: 10px solid white;}


/* Individual Background Images—————————-—— */

.bg-library {   
    background-image: url('/images/luna-guest-house-library.jpg');
    background-position: 50% 42%;
}
.bg-bed {   
    background-image: url('/images/luna-guest-house-bed-right.jpg');
    background-position: 50% 55%;
}
.bg-bed-left {   
    background-image: url('/images/luna-guest-house-bed-left.jpg');
    background-position: 50% 80%;
}
.bg-bed-night {   
    background-image: url('/images/luna-guest-house-bed-night.jpg');
    background-position: 50% 100%;
}
.bg-bath {   
    background-image: url('/images/luna-guest-house-bath.jpg');
}
.bg-flower {   
    background-image: url('/images/luna-guest-house-flowers.jpg');
}
.bg-breakfast {   
    background-image: url('/images/luna-guest-house-breakfast.jpg');
}
.bg-bottle {   
    background-image: url('/images/luna-guest-house-plastic-bottle.jpg');
}
.bg-hosts {   
    background-image: url('/images/luna-guest-house-hosts.jpg');
    background-position: 50% 70%;
}
.bg-village {   
    background-image: url('/images/luna-guest-house-village.jpg');
}
.bg-house {   
    background-image: url('/images/luna-guest-house-house.jpg');
}
.bg-food {   
    background-image: url('/images/luna-guest-house-food.jpg');
    background-position: 50% 80%;
}
.bg-window {   
    background-image: url('/images/luna-guest-house-window.jpg');
}
.bg-map {   
    background-image: url('/images/luna-guest-house-map.jpg');
}


/* Icon Grid - Fontawesome----------- */

.fa {
    display: block;
    text-align: center;
    margin-bottom: 1rem;
    font-size: 3rem;
}  

.material-symbols-outlined {
    display: block;
    line-height: 1;
}

/* Testimonial Block ------------ */
.quote-icon {
    font-size: 6rem;
    display: inline-block;
    color: rgb(120,120,125);
    line-height: 1;
}


/* Buttons & Forms  --------------------------- */

form input {
    width: 15%;
    margin: 0.5rem 1rem 0.5rem 0.5rem; /*if you have margin on left and right , once the form stacks it no longer aligns with the value*/
    padding: 0.5rem;
    border: 1px solid #424237;
    border-radius: 6px;
    outline: none;
    font-family: inherit;
    font-size: 0.9rem;
}

input:focus {
    border-color: #d27456;
}

form label {
    font-weight: bold;
}

.container {
    width: 70vw;
    margin: 0 auto;
    padding: 20px;
    border: 1px solid #E6E6E1;
    border-radius: 6px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

/*Contact form version 2--------*/
.form-2 input,
textarea {
    width: 100%;
    display: block;
    margin: 0rem;
    margin-bottom: 0.3rem;
    padding: 0.5rem;
    font-family: inherit;
    font-size: 0.9rem;
    border: 2px solid #424237;
    border-radius: 6px;
    outline: none;
}

.form-2 input:focus,
textarea:focus {
    border-color:#D27456;
} 

/*Button Variations--------*/
.button {
    padding: 0.5rem 2rem;
    background-color: #d9cfc2;
    color: inherit;
    appearance: none;
    border: 2px solid #d9cfc2;
    border-radius: 6px;
    display: inline-block;
    margin-top: 1rem;
  }

.feature-button {
    background-color: #D27456;
    border: 2px solid #D27456;
    color: #E6E6E1;
}

.feature-button:hover {
    color: #424237;
}

.book-now-button {
    width: 100px;
    height: 100px;
    background-color: #D27456;
    color: #E6E6E1;
    border: none;
    border-radius: 50%;
    font-size: 1.5rem;
    line-height: 1;
    cursor: pointer;
    transition: background-color 0.3s;
}


.book-now-button:hover {
    color: #424237;
}

.sticky-button {
    position: fixed;
    right: 2rem;
    top: 50%;
    z-index: 5;
}







/* General CSS Responsive Styles (Apply everywhere, unless overridden)*/  
.show-xs, 
.show-sm,
.show-md {
	display: none;
}

/* --------------- MD Media Query (64em / 1024px) --------------- */ 
/* Styles added here will apply at devices smaller than 576px, or zoomed in equivalent */ 

@media (max-width: 64em) {

    body { border: 2px solid green; padding: 0.5rem;}

	.show-md { display: block; }
	.hide-md { display: none; }

    .md-text-center {text-align: center;}
    .md-text-left {text-align: left;}

    .md-tall-40 {min-height: 40vh;}
    .md-tall-50 {min-height: 50vh;}
    .md-tall-90 {min-height: 90vh;}
    
    h1  { font-size: 6rem;}

    .md-padded      {padding: 2.5%;}
    .md-padded-05   {padding: 0.5rem;}
    .md-padded-b    {padding-bottom: 0.5rem;}
    .md-padded-t    {padding-top: 5%;}
    .md-padded-l-0  {padding-left:0;}

    .md-container { width: 40vw;}
    form input { width: 100%;}
   
}

/* --------------- SM Media Query (48em / 768px) --------------- */ 
/* Styles added here will apply at devices smaller than 768px, or zoomed in equivalent */ 

@media (max-width: 48em) {

    body { border: 2px solid blue;}

    html    { font-size: 14px;}
    p       { font-size: 1.1rem;}

	.show-sm { display: block; }
	.hide-sm { display: none; }

    .sm-tall-60 {min-height: 60vh;}

    .sm-text-center {text-align: center;}
    .sm-text-left {text-align: left;}
    .sm-text-right {text-align: right;}

    .sm-padded {padding: 5%;}
    .sm-padded-1 {padding: 1rem;}
    .sm-padded-05 {padding: 0.5rem;}

    .sm-padded-t-0 {padding-top: 0;}
    .sm-padded-b-0 {padding-bottom: 0;}
    .sm-margin-t-0 {margin-top: 0;}
    .sm-margin-b-0 {margin-bottom: 0;}

    .logo h2 { font-size: 2rem;}

    header h1 { font-size: 10vw;}

    .sm-subtitle-footer p { font-size: 0.7rem; }

}

/* --------------- XS Media Query (36em / 576px) --------------- */ 
/* Styles added here will apply at devices smaller than 576px, or zoomed in equivalent */ 

@media (max-width: 36em) {

    body    { border: 2px solid red;}

    html    { font-size: 12px;}

    h3      {font-size: 3.2rem;}

	.show-xs { display: block; }
	.hide-xs { display: none; }

    .xs-padded {padding: 1%;}
    .xs-padded-b-2 {padding-bottom: 2rem; }

    .big-text       { font-size: 3.5rem; }
    .medium-text    { font-size: 1.5rem; }

    .xs-tall-50 { min-height: 50vh; }    
}


/* --------------- XXS Media Query (25em / 400px) --------------- */ 
/* Styles added here will apply at devices smaller than 576px, or zoomed in equivalent */ 

@media (max-width: 25em) {

	[class*=grid] .xxs-stack { 
        flex-basis: 100%;
        max-width: 100%;
    }

    .show-xxs { display: block; }
	.hide-xxs { display: none; }
}

